<resources>
    <string name="app_name">Hotel healthy</string>
    <string name="remoman">0</string>
    <string name="jit">สุขภาพจิต</string>
    <string name="ten">- 10 วิธี สร้างสุข ในการทำงาน</string>
    <string name="quot_quot">- ทำงานเป็นสุขด้วย \"สติ-สมาธิ\"</string>
    <string name="pan">"- ภาวะซึมเศร้า ปัญหาสุขภาพจิต
  จากการทำงาน</string>
    <string name="kai">"- ไขปัญหาสุขภาพจิต
  กับอาการนอนไม่หลับ</string>
    <string name="kid">เคล็ดลับในการดูแลตัวเอง</string>
    <string name="yanglay">จังหวัดเชียงราย</string>
    <string name="_0_5391_0999">โทร. 0 5391 0999</string>
    <string name="payapan">- โรงพยาบาลเกษมราษฏร์ ศรีบุรินทร์</string>
    <string name="payapan1">- โรงพยาบาลเชียงรายประชานุเคราะห์</string>
    <string name="_0_5391_0600">โทร. 0 5391 0600</string>
    <string name="_0_5391_7563">โทร. 0 5391 7563</string>
    <string name="payapan2">- โรงพยาบาลแม่ลาว</string>
    <string name="payapan3">- โรงพยาบาลแม่ฟ้าหลวง</string>
    <string name="_0_5360_3100">โทร. 0 5360 3100</string>
    <string name="payapan4">- โรงพยาบาลสมเด็จพระญาณสังวร</string>
    <string name="payapan5">- โรงพยาบาลเซ็นทรัลเชียงใหม่เมโมเรียล</string>
    <string name="payapan6">- โรงพยาบาลโอเวอร์บรุ๊ค</string>
    <string name="payapan7">จังหวัดเชียงใหม่</string>
    <string name="_0_5371_1366">โทร. 0 5371 1366</string>
    <string name="payapan8">- โรงพยาบาลแม่ออน</string>
    <string name="payapan9">- โรงพยาบาลค่ายเม็งรายมหาราช</string>
    <string name="_0_5371_7649">โทร. 0 5371 7649</string>
    <string name="_0_5360_3123">โทร. 0 5360 3123</string>
    <string name="_0_5381_9333_40">โทร.0 5381 9333-40</string>
    <string name="_0_5388_0745_6">โทร. 0 5388 0745-6</string>
    <string name="payapan10">- โรงพยาบาลไชยปราการ</string>
    <string name="_0_5387_0584_6">โทร. 0 5387 0584-6</string>
    <string name="payapan11">- โรงพยาบาลแม่แตง</string>
    <string name="_0_5347_1478">โทร. 0 5347 1478</string>
    <string name="payapan12">- โรงพยาบาลช้างเผือก</string>
    <string name="_0_5322_0022">โทร. 0 5322 0022</string>
    <string name="payapan13">- โรงพยาบาลแม่วาง</string>
    <string name="_0_5336_3438">โทร. 0 5336 3438</string>
    <string name="payapan14">- โรงพยาบาลเชียงดาว</string>
    <string name="_0_5345_5074">โทร. 0 5345 5074</string>
    <string name="payapan15">- โรงพยาบาลมหาราชนครเชียงใหม่</string>
    <string name="_0_5322_1122">โทร. 0 5322 1122</string>
    <string name="payapan16">- โรงพยาบาลโรคฟันเชียงใหม่</string>
    <string name="_0_5341_1150_1">โทร. 0 5341 1150-1</string>
    <string name="payapan17">- โรงพยาบาลแม่อาย</string>
    <string name="_0_5345_9036">โทร. 0 5345 9036</string>
    <string name="payapan19">- โรงพยาบาลนครพิงค์</string>
    <string name="payapan20">- โรงพยาบาลเชียงใหม่ ราม</string>
    <string name="payapan21">- โรงพยาบาลประสาทเชียงใหม่</string>
    <string name="_0_5321_7704">โทร. 0 5321 7704</string>
    <string name="_0_5392_0300">โทร. 0 5392 0300</string>
    <string name="_0_5399_9200">โทร. 0 5399 9200</string>
    <string name="_2">- โรงพยาบาลเชียงใหม่ ราม 2</string>
    <string name="_0_5385_2590">โทร. 0 5385 2590</string>
    <string name="payapan22">- โรงพยาบาลอมก๋อย</string>
    <string name="_0_5346_7068">โทร. 0 5346 7068</string>
    <string name="payapan23">- โรงพยาบาลจินดาสิงหเนตร</string>
    <string name="_0_5324_1712">โทร. 0 5324 1712</string>
    <string name="payapan24">- โรงพยาบาลพร้าว</string>
    <string name="_0_5347_5271">โทร. 0 5347 5271</string>
    <string name="payapan25">- โรงพยาบาลดารารัศมี</string>
    <string name="payapan26">- โรงพยาบาลดอยสะเก็ด</string>
    <string name="_0_5329_7207">โทร. 0 5329 7207</string>
    <string name="payapan27">- โรงพยาบาลราชเวช เชียงใหม่</string>
    <string name="_0_5380_1999">โทร. 0 5380 1999</string>
    <string name="payapan29">- โรงพยาบาลรวมแพทย์เชียงใหม่</string>
    <string name="_0_5349_5571">โทร. 0 5349 5571</string>
    <string name="_0_5327_0144">โทร. 0 5327 0144</string>
    <string name="_0_5348_7124">โทร. 0 5348 7124</string>
    <string name="_0_5346_9018">โทร. 0 5346 9018</string>
    <string name="payapan30">- โรงพยาบาลดอยเต่า</string>
    <string name="payapan31">- โรงพยาบาลสะเมิง</string>
    <string name="payapan32">- โรงพยาบาลหมอวงค์</string>
    <string name="_0_5324_9559">โทร. 0 5324 9559</string>
    <string name="payapan33">- โรงพยาบาลสันป่าตอง</string>
    <string name="_0_5335_5338">โทร. 0 5335 5338</string>
    <string name="payapan34">- โรงพยาบาลฝาง</string>
    <string name="_0_5345_1444">โทร. 0 5345 1444</string>
    <string name="payapan35">- โรงพยาบาลสันทราย</string>
    <string name="_0_5349_8996">โทร. 0 5349 8996</string>
    <string name="payapan36">- โรงพยาบาลหางดงี</string>
    <string name="_0_5344_2390">โทร. 0 5344 2390</string>
    <string name="payapan38">- โรงพยาบาลสารภี</string>
    <string name="_0_5332_1179">โทร. 0 5332 1179</string>
    <string name="payapan39">- โรงพยาบาลฮอด</string>
    <string name="_0_5346_1095">โทร. 0 5346 1095</string>
    <string name="payapan40">- โรงพยาบาลตาเซนต์ปีเตอร์</string>
    <string name="_0_5322_5011_5">โทร. 0 5322 5011-5</string>
    <string name="payapan41">- โรงพยาบาลสวนปรุง</string>
    <string name="_0_5399_9777">โทร. 0 5399 9777</string>
    <string name="_0_53_984325">โทร. 0 53-984325</string>
    <string name="_054_237_400">โทร. 054 237 400</string>
    <string name="payapan42">- โรงพยาบาลสบปราบ</string>
    <string name="_054_019_619">โทร. 054 019 619</string>
    <string name="_054_266_032">โทร. 054 266 032</string>
    <string name="_0_5328_0228_46">โทร. 0 5328 0228-46</string>
    <string name="payapan44">- โรงพยาบาลลานนา เชียงใหม่</string>
    <string name="_053_976000">โทร. 053-976000</string>
    <string name="payapan45">- โรงพยาบาลทุ่งหัวช้าง</string>
    <string name="payapan46">จังหวัดลำปาง</string>
    <string name="_055_296_260">โทร. 055 296 260</string>
    <string name="payapan47">- โรงพยาบาลแม่ทะ</string>
    <string name="_054_268_700">โทร. 054 268 700</string>
    <string name="payapan49">- โรงพยาบาลเสริมงาม</string>
    <string name="_054_286_117">โทร. 054 286 117</string>
    <string name="payapan50">- โรงพยาบาลเขลางศ์นคร-ราม</string>
    <string name="payapan51">- โรงพยาบาลเถิน</string>
    <string name="_054_291_585">โทร. 054 291 585</string>
    <string name="payapan52">- โรงพยาบาลแม่เมาะ</string>
    <string name="payapan53">- โรงพยาบาลห้างฉัตร</string>
    <string name="payapan54">- โรงพยาบาลงาว</string>
    <string name="payapan55">- โรงพยาบาลลำปาง</string>
    <string name="_054_411_111">โทร. 054 411 111</string>
    <string name="_054_495_300">โทร. 054 495 300</string>
    <string name="payapan56">- โรงพยาบาลพะเยา ราม</string>
    <string name="payapan57">- โรงพยาบาลแม่แจ่ม</string>
    <string name="_0_5348_5073">โทร. 0 5348 5073</string>
    <string name="computer_vision_syndrome_cvs">"    คอมพิวเตอร์วิชั่นซินโดรม (Computer Vision Syndrome) หรือCVS เป็นภาวะที่เกิดจากการจ้องหน้าจอคอมพิวเตอร์ โทรศัพท์ แท็บเล็ต หรืออุปกรณ์ดิจิทัลใด ๆ เป็นเวลานานเกินไป โดยอาจทำให้มีอาการตาล้า ตาพร่า ตาแห้ง ระคายเคืองตา เจ็บตา รวมไปถึงปวดศีรษะและปวดไหล่
     พบได้ทั้งในเด็กและผู้ใหญ่ และอาจมีความเสี่ยงต่อภาวะนี้มากขึ้นหากจ้องหน้าจอในที่ที่มีแสงน้อย หรือมีท่าทางที่ไม่เหมาะสมในขณะใช้คอมพิวเตอร์</string>
    <string name="cvs2"> "
     อาการของคอมพิวเตอร์วิชั่นซินโดรม
        แม้ยังไม่มีข้อพิสูจน์ที่แน่ชัดว่าการใช้คอมพิวเตอร์และอุปกรณ์ดิจิทัลที่มีหน้าจอต่าง ๆ นั้นก่อให้เกิดความเสียหายต่อดวงตาในระยะยาวหรือไม่ แต่การใช้คอมพิวเตอร์เป็นประจำอาจเสี่ยงทำให้มีอาการดังต่อไปนี้</string>
    <string name="cvs3">"        - ตาล้า
        - ระคายเคืองตา
        - ตาแห้ง
        - ตาแดง
        - ตาพร่า
        - มองเห็นภาพซ้อน
        - ปวดศีรษะ
        - ปวดคอหรือปวดหลัง

     หากผู้ป่วยมีอาการดังข้างต้น ควรรีบหาทางรักษาหรือแก้ไข เพราะการใช้คอมพิวเตอร์นาน ๆ นั้น ไม่เพียงก่อให้เกิดอาการเกี่ยวกับดวงตา แต่อาจมีปัญหาสุขภาพอื่น ๆ จากการใช้งานและการอยู่ในท่านั่งที่ไม่เหมาะสม ซึ่งส่งผลกระทบต่อการใช้ชีวิตประจำวันหรือการทำงานได้

     สาเหตุของคอมพิวเตอร์วิชั่นซินโดรม
        ขณะทำงานโดยใช้คอมพิวเตอร์ ดวงตาของคนเราต้องปรับโฟกัสภาพใหม่อยู่ตลอดเวลา เพราะต้องเคลื่อนไหวไปมาตามบรรทัดตัวหนังสือที่อ่าน หรือต้องเลื่อนดูเนื้อหาบนหน้าจอสลับไปมาและตอบสนองต่อภาพที่เปลี่ยนไปเรื่อย ๆ
        เพื่อให้สมองประมวลผลภาพเหล่านั้น ในระหว่างนี้กล้ามเนื้อดวงตาจึงต้องทำงานอย่างหนัก ซึ่งมากกว่าการอ่านหนังสือธรรมดา
        ยิ่งไปกว่านั้น หน้าจอคอมพิวเตอร์มีการตัดกันของสีต่าง ๆ และมีการสั่นไหวของพิกเซลอยู่ตลอดเวลา ซึ่งเป็นจุดเล็ก ๆ หลายจุดที่ประกอบขึ้นเป็นภาพ และผู้ใช้งานยังต้องเพ่งสายตาเป็นเวลานาน จึงส่งผลให้เสี่ยงเกิดอาการของ CVS ตามมาได้
	    นอกจากนี้ มีงานวิจัยพบว่าการใช้สายตากับอุปกรณ์ดิจิทัลเสี่ยงทำให้ตาแห้งและระคายเคือง เนื่องจากขณะจ้องหน้าจอ ดูโทรทัศน์ หรืออ่านหนังสือบนจอดิจิทัล คนเราจะกะพริบตาน้อยลงกว่าปกติถึงครึ่งหนึ่งจากที่เคยกะพริบตาประมาณ 15 ครั้งต่อนาที ซึ่งการกะพริบตานั้นจำเป็นต่อดวงตาอย่างมาก เพราะจะช่วยให้น้ำตาไหลออกมาหล่อเลี้ยงทั่วดวงตา ช่วยให้ดวงตาชุ่มชื้นและไม่ระคายเคืองได้ง่าย

     ส่วนความเสี่ยงต่อภาวะ CVS นั้นจะยิ่งเพิ่มสูงขึ้นตามอายุด้วย เนื่องจากเลนส์แก้วตาของคนเราจะค่อย ๆ สูญเสียความยืดหยุ่นเมื่อเวลาผ่านไป ทำให้อาจสามารถโฟกัสวัตถุระยะใกล้ไกลได้น้อยลงเมื่ออายุราว ๆ 40 ปี และทำให้เริ่มมีสายตายาวในช่วงอายุดังกล่าว และหากผู้ใดมีปัญหาทางสายตาอยู่แล้วอย่างสายตาสั้นหรือสายตาเอียง มีความผิดปกติของสายตาแต่ไม่ยอมใส่แว่น หรือไม่ทำตามหลักการใช้คอมพิวเตอร์ที่ถูกต้องก็เสี่ยงเกิดภาวะ CVS ได้มากกว่าคนทั่วไปเช่นกัน

     การวินิจฉัยคอมพิวเตอร์วิชั่นซินโดรม
        หากมีอาการเข้าข่าย CVS แพทย์จะสอบถามถึงพฤติกรรมการใช้ชีวิตเพื่อประเมินปัจจัยเสี่ยงของภาวะนี้
        จากนั้นอาจให้ผู้ป่วยเข้ารับการตรวจสุขภาพตาหรือตรวจสายตา และวางแผนการรักษาอย่างเหมาะสมต่อไป

     การรักษาคอมพิวเตอร์วิชั่นซินโดรม
        ในกรณีที่อาการของ CVS เกิดจากโรคอื่น ๆ ผู้ป่วยอาจต้องเข้ารับการรักษาโรคนั้น ๆ เป็นอันดับแรก ส่วนการบรรเทาอาการของภาวะ CVS และป้องกันอาการอื่น ๆ
        ที่อาจเกิดขึ้นตามมานั้น ทำได้ง่าย ๆ ด้วยตนเองเพียงปรับเปลี่ยนพฤติกรรมในการใช้คอมพิวเตอร์และโทรศัพท์มือถือตามคำแนะนำ ดังต่อไปนี้
        - หมั่นพักสายตาเป็นระยะ โดยใช้กฎ 20-20-20 ที่ให้พักสายตาจากหน้าจอทุก 20 นาที ด้วยการมองออกไปที่ระยะ 20 ฟุต (6 เมตร) เป็นเวลาประมาณ 20 วินาที
        - เมื่อใช้คอมพิวเตอร์ ให้หยุดพักเป็นเวลาประมาณ 15 นาที ในทุก 2 ชั่วโมง
        - พยายามกะพริบตาบ่อย ๆ เพื่อคงความชุ่มชื้นของดวงตา ป้องกันตาแห้งและระคายเคือง และอาจใช้ยาหยอดตาเมื่อรู้สึกตาแห้ง
        - ใช้ฟิล์มติดหน้าจอกันแสงสะท้อน และปรับสภาพแสงโดยรอบให้สมดุลกับหน้าจอ โดยหลีกเลี่ยงการนั่งทำงานบริเวณที่มีแสงสว่างจากภายนอกจ้าเกินไป ส่วนแสงไฟภายในห้องที่สว่างหรือมืดเกินไปก็ไม่เป็นผลดีเช่นกัน จึงควรระวังไม่ให้แสงจากหน้าจอสว่างหรือมืดกว่าแสงโดยรอบมากเกินไป
        - ปรับหน้าจอคอมพิวเตอร์ให้อยู่ในระดับที่เหมาะสม โดยให้หน้าจออยู่ต่ำกว่าระดับสายตา 10-15 องศา และอยู่ห่างจากสายตาประมาณ 20-28 นิ้ว ซึ่งจะช่วยให้ไม่ต้องยืดคอและไม่ต้องเพ่งสายตาดูจอ หากต้องดูเอกสารไปด้วย ควรหาที่ตั้งเอกสารข้าง ๆ คอมพิวเตอร์ เพื่อจะได้ไม่ต้องมองจอและก้มมองโต๊ะสลับกันไปมา
        - ปรับขนาดตัวอักษรบนหน้าจอให้มองเห็นชัดเจน รวมทั้งปรับแสงสว่างและความคมชัดให้สบายตามากที่สุด
        - หากใช้คอนแทคเลนส์เป็นประจำ ควรเว้นช่วงหยุดพักตาแล้วใส่แว่นแทนบ้าง เพราะคอนแทคเลนส์ทำให้ตาแห้งและระคายเคืองได้ง่าย
        - ไปตรวจวัดสายตาเป็นประจำ หากมีสายตาผิดปกติ แพทย์อาจแนะนำให้ใส่แว่นหรือคอนแทคเลนส์ บางรายอาจต้องใส่แว่นสำหรับการทำงานโดยใช้คอมพิวเตอร์โดยเฉพาะ ซึ่งเป็นแว่นกรองแสง ลดการตัดกันของแสง และช่วยให้มองหน้าจอได้อย่างสบายตาขึ้น
        - คอยระวังการใช้คอมพิวเตอร์และโทรศัพท์มือถือของเด็ก ควรตรวจดูให้แน่ใจว่าหน้าจอคอมพิวเตอร์อยู่ในระดับที่เหมาะสม แสงสว่างภายนอก ภายในบ้าน และหน้าจอมีความสมดุลกัน รวมทั้งพาเด็กไปตรวจวัดสายตาอย่างสม่ำเสมอ

     ภาวะแทรกซ้อนของคอมพิวเตอร์วิชั่นซินโดรม
        อาการของ CVS มักไม่ส่งผลร้ายแรงใด ๆ ในระยะยาว แต่อาจรบกวนการทำงาน ทำให้รู้สึกเหนื่อยและมีสมาธิน้อยลง ซึ่งส่งผลให้มีประสิทธิภาพในการทำงานลดลงได้ในที่สุด

     การป้องกันคอมพิวเตอร์วิชั่นซินโดรม
        การป้องกันภาวะ CVS ทำได้เช่นเดียวกับวิธีรักษาบรรเทาอาการ โดยปรับพฤติกรรมการใช้คอมพิวเตอร์ หมั่นหยุดพักสายตา กะพริบตาบ่อย ๆ และตรวจสุขภาพตาเป็นประจำ รวมทั้งปรับสภาพแวดล้อมและท่าทางให้เหมาะสม

    </string>
</resources>