<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgjit"
    tools:context=".Jij">

    <Button
        android:id="@+id/btnbkjij"
        android:layout_width="62dp"
        android:layout_height="35dp"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/btnbkjinhm"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/txtwew1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jit"
        android:textColor="#0E0D0D"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/txtwew2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickmaid"
        android:text="@string/ten"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/txtwew1"
        app:layout_constraintTop_toBottomOf="@+id/txtwew1"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/txtwew3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickmaid2"
        android:text="@string/quot_quot"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtwew2"
        app:layout_constraintTop_toBottomOf="@+id/txtwew2" />

    <TextView
        android:id="@+id/txtwew4"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickmaid3"
        android:text="@string/pan"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtwew5"
        app:layout_constraintTop_toBottomOf="@+id/txtwew5" />

    <TextView
        android:id="@+id/txtwew5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickmaid4"
        android:text="@string/kai"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtwew3"
        app:layout_constraintTop_toBottomOf="@+id/txtwew3" />

</androidx.constraintlayout.widget.ConstraintLayout>