<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcvs"
    tools:context=".Cvs">

    <Button
        android:id="@+id/btnbkcvs"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnbkcvshm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="78dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtcvs1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer_vision_syndrome_cvs"
                android:textColor="#030303"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtcvs2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cvs2"
                android:textColor="#030303"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtcvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cvs3"
                android:textColor="#030303"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>